--- a/servers/.env.example
+++ b/servers/.env.example
@@ -2,9 +2,14 @@ AUTH_PORT=9000
 WALLET_PORT=9001
 TRANSFER_PORT=9002
 PAYMENT_PORT=9003
-MYSQL_URL="mysql://root:password@container_name:3306/db_name"
 NATS_URL=nats://nats
 JWT_SECRET=123
 ACCESS_TOKEN_EXPIRY=1
 REFRESH_TOKEN_EXPIRY=30
+MYSQL_URL="mysql://root:xbillpay123@mysql_db:3306/xbillpay_dbase"
+SHAGO_URL=http://test.shagopayments.com/public/api/test/b2b
+
+#supply correct values
 PAYSTACK_KEY=sk_test_a96841883
+SHAGO_KEY=163fc53f4efde6288a2c87a2ceaaefae0685fd217e70d
+
